--- a/style.css
+++ b/style.css
@@ -46,7 +46,23 @@ html {
     height: 100%;
     background-color: green;
 }
-
 .life-bar .life.danger {
     background-color: red;
+}
+
+/* Area do Resultado */
+
+.result {
+    display: flex;
+    justify-content: center;
+    font-size: 1.3rem;
+    font-weight: 600;
+}
+
+.result .win {
+    color: green
+}
+
+.result .lose {
+    color: red;
 }
